--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_schedule">Schedule</string>
     <string name="title_favorites">Favorites</string>
     <string name="title_home">Shows</string>
+    <string name="search">Search</string>
 </resources>
