--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="comment">Comment</string>
     <string name="sign_up">Sign Up</string>
     <string name="trouble">We had trouble completing your request</string>
+    <string name="logout">Logout</string>
 </resources>
