--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="login">Login</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_schedule">Schedule</string>
+    <string name="title_schedule">Watch List</string>
     <string name="title_favorites">Favorites</string>
     <string name="title_home">Shows</string>
     <string name="search">Search</string>
